# on-task

./: Makefile  README.md  docker-compose.yml
agent-ui/: .env.local  .gitignore  Dockerfile  Makefile  eslint.config.mjs  next.config.ts  package.json
agent-ui/src/app/: App.Layout.tsx  App.Navigate.tsx  layout.tsx  page.tsx
agent-ui/src/app/api/chat/: agent.prompt.ts  route.ts
agent-ui/src/app/components/chat/: AIResponseComponent.tsx  QueryComponent.Model.ts  UserQueryComponent.tsx
agent-ui/src/app/components/theme-toggle/: ThemeToggleButton.tsx
agent-ui/src/lib/components/: Logo.tsx
agent-ui/src/lib/components/ui/: button.tsx  dropdown-menu.tsx
graphql-mcp/: Dockerfile
graphql-mcp/src/: .env  main.py  pyproject.toml
graphql-mcp/src/utils/env_handler/: EnvUtils.py  __init__.py
graphql-mcp/src/utils/graphql/: GraphQLModel.py  GraphQLUtils.py  __init__.py
graphql-mcp/src/utils/logger/: LoggerModel.py  LoggerUtils.py  __init__.py
graphql-mcp/src/utils/mcp/: McpUtils.py  __init__.py
